// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CompanyTaxField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="company_tax_id"
      >
        NIP firmy
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="NIP firmy"
          name="company_tax_id"
          placeholder="NIP firmy"
          value="948167873"
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        Podany NIP jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyTaxField/> matches snapshot 1`] = `
<input
  class="sc-fnVYJo csxChD"
  id="testId"
  label="NIP firmy"
  name="company_tax_id"
  placeholder="NIP firmy"
  value=""
/>
`;

exports[`<CompanyTaxField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="company_tax_id"
      >
        CompanyTax*
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo cMeJLu"
          id="testId"
          label="CompanyTax"
          name="company_tax_id"
          placeholder="NIP firmy*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-hBMVcZ kROtfw"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyTaxField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fujyUd bFqltC"
    id="testForm"
  >
    <input
      class="sc-iCoHVE gEjxKq"
      form="[object Object]"
    />
    <div
      class="sc-iqAbSa VlpJw"
    >
      <label
        for="company_tax_id"
      >
        Company Tax
      </label>
      <div
        class="sc-lmgQde iscgnI"
      >
        <input
          class="sc-fnVYJo csxChD"
          id="testId"
          label="Company Tax"
          name="company_tax_id"
          placeholder="NIP firmy"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
